# idash2021

./: .gitattributes  ConvolutionStarter.ipynb  Dockerfile  LICENSE  MappingOfGenes.ipynb  NNStarter.ipynb  README.md  README_old.md  bias.csv  coef.csv  eda.ipynb  inp.csv  inp_tests.csv  out_tests.csv
data/: bias_200.npy  coef_200.npy  pca_200.pkl  pca_200_components.npy  pca_200_mean.npy  pca_200_variance.npy
regression/: test1.cpp
seal_impl/: CMakeLists.txt
src/: CMakeLists.txt  common.h  constants.h  main.cpp  main_preprocessing.cpp
src/client/: ClientSide.cpp  ClientSide.h
src/ml/: CoefLogisticRegression.cpp  CoefLogisticRegression.h  LogisticRegression.cpp  LogisticRegression.h  ML.h  MiharaLogisticRegression.hpp  algebra.cpp  algebra.h
src/postprocess/: PostProcessor.h  SigmoidPostprocessor.cpp  SigmoidPostprocessor.h  SoftmaxPostprocessor.cpp  SoftmaxPostprocessor.h
src/preprocess/: DummyPreprocessor.cpp  DummyPreprocessor.h  PreProcessor.cpp  PreProcessor.h
src/server/: ServerSide.cpp  ServerSide.h
src/test/: CMakeLists.txt  testAlgebra.cpp  testLogisticRegression.cpp
src/utils/: IOUtils.cpp  IOUtils.h  Timer.hpp  mathUtils.cpp  mathUtils.h  npy.h
train/: data_preprocess.py  feature_preprocess.py  train_lr.py
train/for_experimental_use/: gen_test.py  kfold_lr.py  test_usable_lr.py  use_comp_index.py  validation.py
